--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -19,10 +19,8 @@
             android:exported="false" />
         <activity
             android:name=".activities.UsersActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.UsersAdapter"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".activities.SignUpActivity"
             android:windowSoftInputMode="adjustResize" />
