--- a/build.gradle
+++ b/build.gradle
@@ -42,9 +42,12 @@ dependencies {
     //Firebase
     implementation libs.firebase.messaging
     implementation libs.firebase.firestore
+//    implementation libs.litert
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    implementation 'org.tensorflow:tensorflow-lite:2.9.0'
+    implementation 'com.google.mlkit:face-detection:16.1.7'
     //link fire base
     implementation platform('com.google.firebase:firebase-bom:33.9.0')
     //Tự động thích ứng màn hình
@@ -55,4 +58,5 @@ dependencies {
     implementation 'com.makeramen:roundedimageview:2.3.0'
     //multildex
     implementation 'androidx.multidex:multidex:2.0.1'
+
 }
