--- a/build.gradle
+++ b/build.gradle
@@ -42,11 +42,13 @@ dependencies {
     //Firebase
     implementation libs.firebase.messaging
     implementation libs.firebase.firestore
-//    implementation libs.litert
+    implementation project(':sdk')
+//    implementation libs.litert.gpu
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation 'org.tensorflow:tensorflow-lite:2.9.0'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.9.0'
     implementation 'com.google.mlkit:face-detection:16.1.7'
     //link fire base
     implementation platform('com.google.firebase:firebase-bom:33.9.0')
