--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:theme="@style/Theme.ChatApp"
         tools:targetApi="31">
         <activity
+            android:name=".activities.RecognizeFaceActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.CameraActivity"
             android:exported="false" />
         <activity
